Upgrade VisualStudio project files from VS2017 to VS2022

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 NetlistViewer/build/linux/gcc/
 NetlistViewer/build/linux/NetlistViewer
-
+NetlistViewer/build/win/x64
+NetlistViewer/build/win/.vs
+NetlistViewer/build/win/*.pdb
