--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ NetlistViewer/build/win/x64
 NetlistViewer/build/win/.vs
 NetlistViewer/build/win/*.pdb
 NetlistViewer/distrib/*.exe
-
+vcpkg_installed/
