--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 name: main CI
 
 on:
+  workflow_dispatch:
   push:
     branches: [ master ]
   pull_request:
@@ -14,11 +15,18 @@ jobs:
     # install deps
     - uses: actions/checkout@v4
     - name: install debian-packaged dependencies
-      run: sudo apt install -y libwxgtk3.0-gtk3-dev libboost-graph1.74.0 libboost-serialization1.74.0 libboost-all-dev
+      run: sudo apt install -y libwxgtk3.2-dev libboost-graph1.83.0 libboost-serialization1.83.0 libboost-all-dev
 
     # build
     - name: build netlist-viewer
       run: cd NetlistViewer/build/linux && make
+
+    # save binary
+    - name: Save
+      uses: actions/upload-artifact@v4
+      with:
+        name: NetlistViewer, Linux X86-64
+        path: NetlistViewer/build/linux/NetlistViewer
 
   WindowsBuild:
     runs-on: windows-latest
