--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,10 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  # add a cron job to run every month -- this project is not very active, at least ensure there's a valid CI build every month
+  # this is also useful to check if something breaks e.g. due to infrastructure changes (e.g. Ubuntu/Windows OS)
+  schedule:
+    - cron: '0 0 1 * *'
 
 jobs:
   LinuxBuild:
@@ -39,7 +43,7 @@ jobs:
       # NOTE: no packages/dependencies are installed at this time -- msbuild will use vcpkg to download&build dependencies
       #       specified in the vcpkg.json during the build step below. This happens because the VisualStudio solution has
       #       the 'VcpkgEnableManifest' property set to True
-      - name: Setup anew (or from cache) vcpkg (and does not build any package)
+      - name: Setup a new (or from cache) vcpkg (and does not build any package)
         uses: lukka/run-vcpkg@v11.5
         with:
           # as suggested, we pin the version of "vcpkg" to a specific hash (23rd March 2025) to ensure reproducible builds
