--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,17 +51,29 @@ jobs:
       - name: Integrate vcpkg
         run: vcpkg integrate install
 
-      # this is going to be veeeeeeeeeeery long
-      - name: Build dependencies
-        run: vcpkg install
+      # # this is going to be veeeeeeeeeeery long
+      # - name: Build dependencies
+      #   run: vcpkg install
 
-      # build
-      - name: Build netlist-viewer
-        run: msbuild NetlistViewer\build\win\netlist_viewer_vs2022.vcxproj -t:rebuild -property:Configuration=Release -property:Platform=x64
+      # # build
+      # - name: Build netlist-viewer
+      #   run: msbuild NetlistViewer\build\win\netlist_viewer_vs2022.vcxproj -t:rebuild -property:Configuration=Release -property:Platform=x64
 
-      # save the whole folder containing the binary and DLLs
-      - name: Save built binaries
-        uses: actions/upload-artifact@v4
-        with:
-          name: NetlistViewer, Windows x86_64
-          path: NetlistViewer/build/win/x64/Release/
+      # # save the whole folder containing the binary and DLLs
+      # - name: Save built binaries
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: NetlistViewer, Windows x86_64
+      #     path: NetlistViewer/build/win/x64/Release/
+
+      - name: Install NSIS
+        run: |
+          iwr -useb get.scoop.sh -outfile 'install.ps1'
+          .\install.ps1 -RunAsAdmin
+          scoop update
+          scoop bucket add extras
+          scoop install nsis
+      - name: Print NSIS version
+        run: makensis -VERSION
+      - name: Print NSIS compile flags
+        run: makensis -HDRINFO
