--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,49 +33,51 @@ jobs:
   #         path: NetlistViewer/build/linux/NetlistViewer
   #         if-no-files-found: error
 
-  # WindowsBuild:
-  #   runs-on: windows-latest
-  #   steps:
-  #     - uses: actions/checkout@v5
-  #     - name: Add msbuild to PATH
-  #       uses: microsoft/setup-msbuild@v2
-      
-  #     # setup vcpkg & msbuild tools
-  #     # NOTE: no packages/dependencies are installed at this time -- msbuild will use vcpkg to download&build dependencies
-  #     #       specified in the vcpkg.json during the build step below. This happens because the VisualStudio solution has
-  #     #       the 'VcpkgEnableManifest' property set to True
-  #     - name: Setup a new (or from cache) vcpkg (and does not build any package)
-  #       uses: lukka/run-vcpkg@v11.5
-  #       with:
-  #         # as suggested, we pin the version of "vcpkg" to a specific hash (23rd March 2025) to ensure reproducible builds
-  #         vcpkgGitCommitId: a76b33254af4092ff45f08ec5adcd9fd06468b43
-  #     - name: Integrate vcpkg
-  #       run: vcpkg integrate install
-
-  #     # this is going to be veeeeeeeeeeery long
-  #     - name: Build dependencies
-  #       run: vcpkg install
-
-  #     # build
-  #     - name: Build netlist-viewer
-  #       run: msbuild NetlistViewer\build\win\netlist_viewer_vs2022.vcxproj -t:rebuild -property:Configuration=Release -property:Platform=x64
-
-  #     # save the whole folder containing the binary and DLLs as workflow artifact
-  #     - name: Save built binaries
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: NetlistViewer, Windows x86_64
-  #         path: NetlistViewer/build/win/x64/Release/
-  #         if-no-files-found: error
-
-  WindowsInstaller:
+  WindowsBuild:
     runs-on: windows-latest
-    #needs: WindowsBuild ## speedup
     steps:
       - uses: actions/checkout@v5
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v2
+      
+      # setup vcpkg & msbuild tools
+      # NOTE: no packages/dependencies are installed at this time -- msbuild will use vcpkg to download&build dependencies
+      #       specified in the vcpkg.json during the build step below. This happens because the VisualStudio solution has
+      #       the 'VcpkgEnableManifest' property set to True
+      - name: Setup a new (or from cache) vcpkg (and does not build any package)
+        uses: lukka/run-vcpkg@v11.5
+        with:
+          # as suggested, we pin the version of "vcpkg" to a specific hash (23rd March 2025) to ensure reproducible builds
+          vcpkgGitCommitId: a76b33254af4092ff45f08ec5adcd9fd06468b43
+      - name: Integrate vcpkg
+        run: vcpkg integrate install
 
+      # this is going to be veeeeeeeeeeery long
+      - name: Build dependencies
+        run: vcpkg install
+
+      # build
+      - name: Build netlist-viewer
+        run: msbuild NetlistViewer\build\win\netlist_viewer_vs2022.vcxproj -t:rebuild -property:Configuration=Release -property:Platform=x64
+
+      # save the whole folder containing the binary and DLLs as workflow artifact
+      - name: Save built binaries
+        uses: actions/upload-artifact@v4
+        with:
+          name: NetlistViewer_Windows_x86_64
+          path: NetlistViewer/build/win/x64/Release/
+          if-no-files-found: error
+
+  WindowsInstaller:
+    runs-on: windows-latest
+    needs: WindowsBuild
+    steps:
+      - uses: actions/checkout@v5
+
+      - uses: actions/download-artifact@v5
+        with:
+          name: NetlistViewer_Windows_x86_64
+      
       # snippet of actions taken from https://github.com/NSIS-Dev/ci-examples/blob/main/.github/workflows/windows-latest.yml
       # see also https://scoop.sh/
       # - name: Install NSIS
@@ -90,7 +92,6 @@ jobs:
         with:
           buckets: extras
           apps: nsis@3.11
-
 
       - name: Print NSIS version
         run: makensis -VERSION
